--- a/orp/conf/esg-orp.properties
+++ b/orp/conf/esg-orp.properties
@@ -1,8 +1,8 @@
 # Location of keystore used to sign the authentication cookie
-keystoreFile=$ESGF_KEYSTORE_FILE
+keystoreFile={{ .Env.ESGF_KEYSTORE_FILE }}
 # Password used to read the keystore
-keystorePassword=$ESGF_KEYSTORE_PASSWORD
+keystorePassword={{ .Env.ESGF_KEYSTORE_PASSWORD }}
 # Alias of keystore entry used to sign the authentication cookie
-keystoreAlias=$ESGF_KEYSTORE_ALIAS
+keystoreAlias={{ .Env.ESGF_KEYSTORE_ALIAS }}
 
 orp.provider.list=/esg/config/esgf_known_providers.xml
