--- a/tds/conf/web.xml
+++ b/tds/conf/web.xml
@@ -77,11 +77,11 @@
     </init-param>
     <init-param>
       <param-name>openidRelyingPartyUrl</param-name>
-      <param-value>$ESGF_ORP_URL/esg-orp/home.htm</param-value>
+      <param-value>{{ .Env.ESGF_ORP_HOME_ENDPOINT }}</param-value>
     </init-param>
     <init-param>
       <param-name>trustoreFile</param-name>
-      <param-value>$JAVA_HOME/lib/security/cacerts</param-value>
+      <param-value>{{ .Env.JAVA_HOME }}/lib/security/cacerts</param-value>
     </init-param>
     <init-param>
       <param-name>trustorePassword</param-name>
@@ -95,7 +95,7 @@
     <init-param>
       <!-- URL of an authentication service -->
       <param-name>authenticateUrl</param-name>
-      <param-value>$ESGF_AUTH_URL/home/</param-value>
+      <param-value>{{ .Env.ESGF_AUTH_HOME_ENDPOINT }}</param-value>
     </init-param>
     <init-param>
       <!-- name of the html query parameter signalling a return-to URL for -->
@@ -112,7 +112,7 @@
     <init-param>
       <!-- base64 encoded secret key used to encrypt the cookie, example: -->
       <param-name>secretKey</param-name>
-      <param-value>$ESGF_COOKIE_SECRET_KEY</param-value>
+      <param-value>{{ getenv "ESGF_COOKIE_SECRET_KEY" }}</param-value>
     </init-param>
     <init-param>
       <!-- name of the httpRequest attribute to set on authentication success -->
@@ -143,7 +143,7 @@
     </init-param>
     <init-param>
       <param-name>authorizationServiceUrl</param-name>
-      <param-value>$ESGF_ORP_URL/esg-orp/saml/soap/secure/authorizationService.htm</param-value>
+      <param-value>{{ .Env.ESGF_AUTHORIZATION_SERVICE_ENDPOINT }}</param-value>
     </init-param>
   </filter>
   <filter-mapping>
@@ -163,7 +163,7 @@
     <filter-class>esg.orp.app.RegistrationFilter</filter-class>
     <init-param>
       <param-name>registrationRelayUrl</param-name>
-      <param-value>$ESGF_ORP_URL/esg-orp/registration-request.htm</param-value>
+      <param-value>{{ .Env.ESGF_REGISTRATION_RELAY_ENDPOINT }}</param-value>
     </init-param>
   </filter>
   <filter-mapping>
