--- a/publisher/conf/esg.ini
+++ b/publisher/conf/esg.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 checksum = sha256sum | SHA256
-dburl = postgresql://${ESGF_DATABASE_USER}:${ESGF_DATABASE_PASSWORD}@${ESGF_DATABASE_HOST}:${ESGF_DATABASE_PORT}/${ESGF_DATABASE_NAME}
+dburl = {{ .Env.DATABASE_URL }}
 gateway_options = ESG-PCMDI, ESG-NCAR, ESG-ORNL, ESG-BADC, ESG-NCI, ESG-DKRZ
 hessian_service_debug = false
 hessian_service_keyfile = /esg/config/esgcet/.globus/certificate-file
@@ -8,8 +8,8 @@ hessian_service_certfile = /esg/config/esgcet/.globus/certificate-file
 hessian_service_polling_delay = 3
 hessian_service_polling_iterations = 10
 hessian_service_port = 443
-hessian_service_remote_metadata_url = $ESGF_HESSIAN_METADATA_URL
-hessian_service_url = $ESGF_HESSIAN_URL
+hessian_service_remote_metadata_url = {{ .Env.ESGF_HESSIAN_METADATA_URL }}
+hessian_service_url = {{ .Env.ESGF_HESSIAN_URL }}
 log_format = %(levelname)-10s %(asctime)s %(message)s
 log_level = WARNING
 offline_lister =
@@ -26,20 +26,20 @@ thredds_file_services =
         HTTPServer | /thredds/fileServer/       | HTTPServer    | fileservice
         OpenDAP    | /thredds/dodsC/            | OpenDAPServer | fileservice
 #        GridFTP    | gsiftp://my.esgf.node:2811/ | GRIDFTP       | fileservice
-thredds_url = $ESGF_TDS_CATALOG_URL
-thredds_username = $ESGF_TDS_USERNAME
-thredds_password = $ESGF_TDS_PASSWORD
+thredds_url = {{ .Env.ESGF_TDS_CATALOG_URL }}
+thredds_username = {{ .Env.ESGF_TDS_USERNAME }}
+thredds_password = {{ getenv "ESGF_TDS_PASSWORD" }}
 thredds_authentication_realm = THREDDS Data Server
 thredds_catalog_basename = %(dataset_id)s.v%(version)s.xml
 thredds_master_catalog_name = Earth System Grid catalog
 thredds_max_catalogs_per_directory = 500
 thredds_offline_services =
 #        SRM | srm://esgf-data-node:6288/srm/v2/server?SFN=/archive.sample.gov | HRMatPCMDI
-thredds_reinit_error_url = $ESGF_TDS_REINIT_ERROR_URL
+thredds_reinit_error_url = {{ .Env.ESGF_TDS_REINIT_ERROR_URL }}
 thredds_error_pattern = Catalog init
 thredds_reinit_success_pattern = reinit ok
 thredds_fatal_error_pattern = **Fatal
-thredds_reinit_url = $ESGF_TDS_REINIT_URL
+thredds_reinit_url = {{ .Env.ESGF_TDS_REINIT_URL }}
 thredds_restrict_access = esg-user
 thredds_root = /esg/content/thredds/esgcet
 thredds_root_catalog_name = Earth System Root catalog
