--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,9 @@
 #
 # Required env variables:
 #
-# ESGF_CONFIG : points to the root ESGF configuration directory
-#       example: export ESGF_CONFIG=/Users/cinquini/ESGF_CONFIG
-# ESGF_HOSTNAME: HostName or IP address for apache httpd front-end server
-#       example: export ESGF_HOSTNAME=my.esgf.node
-#       example: export ESGF_HOSTNAME=`docker-machine ip`
-# ESGF_VERSION: version of ESGF/Docker distribution
-#       example: export ESGF_VERSION=1.0
-# ESGF_DATA_DIR: root of ESGF data directories
+# ESGF_HOSTNAME: Host name for the deployment
+# ESGF_CONFIG : Directory containing configuration
+# ESGF_DATA: Directory containing ESGF data files
 
 version: '3.4'
 
